新增穿梭框

--- a/components/adminSystem/adminSystem.scss
+++ b/components/adminSystem/adminSystem.scss
@@ -8,9 +8,11 @@ $color-error: #d63a29;
 $color-grey: #30363e;
 $color-dark: #001529;
 $color-fff: #fff;
+$border-color: #e0e0e0;
 $color-light-blue: #66b1ff;
 $input-focus-color: #40a9ff;
 $element-color-primary: #1890ff;
+$element-color-primary-light: #1890ff1a;
 .hp-adminsystem {
     &_header {
         height: 60px;
