--- a/components/select/select.scss
+++ b/components/select/select.scss
@@ -9,7 +9,11 @@
         position: absolute;
         right: 0;
         height: 100%;
-        border: 1px solid #ddd;
+        // border: 1px solid #ddd;
+        // background: #fff;
+        border: 1px solid transparent;
+        background: transparent;
+        border-left: 1px solid #ddd;
         color: #666;
         border-top-right-radius: 4px;
         border-bottom-right-radius: 4px;
