--- a/components/dropDown/dropDown.scss
+++ b/components/dropDown/dropDown.scss
@@ -1,4 +1,132 @@
-@import "adminSystem/adminSystem";
-.hp-dropdown {
-
+@import "adminSystem/adminSystem.scss";
+.hp-dropdown{
+    position: relative;
+    display: inline-block;
+    a {
+        text-decoration: none;
+        color: #2196f3;
+        font-size: 14px;
+    }
+    &-link {
+        > i {
+            line-height: 1;
+            position: relative;
+            top: 2px;
+        }
+    }
+    &-list{
+        min-width: 120px;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        box-shadow: 0 3px 8px rgba(0,0,0,.35);
+        display: inline-block;
+        clear: both;
+        position: absolute;
+        top: 20px;
+        left: 0;
+        background: #ffffff;
+        border-radius: 4px;
+        list-style: none;
+        transition: all ease-in-out .3s;
+        -moz-transition: all ease-in-out .3s;
+        -ms-transition: all ease-in-out .3s;
+        -o-transition: all ease-in-out .3s;
+        -webkit-transition: all ease-in-out .3s;
+        transform-origin: top;
+        z-index: 99;
+        display: none;
+        &.active{
+            display: inherit;
+            opacity: 1;
+            transform: scaleY(1);
+        }
+        &.collapsing{
+            transform: scaleY(0);
+            opacity: 0;
+            display: inherit;
+        }
+        li{
+            line-height: 30px;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            font-size: 13px;
+            transition: all ease-in-out .3s;
+            -moz-transition: all ease-in-out .3s;
+            -ms-transition: all ease-in-out .3s;
+            -o-transition: all ease-in-out .3s;
+            -webkit-transition: all ease-in-out .3s;
+            cursor: pointer;
+            & > .hp-dropdown-item-title{
+                display: inherit;
+                padding: 4px 10px;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                overflow: hidden;
+                &:hover{
+                    color: #2196f3;
+                    background: rgba(33,150,243, .1);
+                }
+            }
+            &.disabled > .hp-dropdown-item-title{
+                &:hover{
+                    color: #bbb;
+                    cursor: not-allowed;
+                    background: #fff;
+                }
+            }
+            &.disabled{
+                color: #bbb;
+                cursor: not-allowed;
+                &:hover{
+                    color: #bbb;
+                    cursor: not-allowed;
+                }
+            }
+        }
+    }
+    &-submenu{
+        position: relative;
+        &-title{
+            padding: 4px 10px;
+            padding-right: 20px;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            overflow: hidden;
+            display: inherit;
+            position: relative;
+            &:hover{
+                color: #2196f3;
+                background: rgba(33,150,243, .1);
+            }
+            &-icon.icon.iconfont{
+                font-size: 12px;
+                float: right;
+                position: relative;
+                top: 2px;
+                transform: scale(.8);
+                position: absolute;
+                right: 5px;
+                top: 6px;
+            }
+        }
+        &.disabled{
+            .hp-dropdown-submenu-title:hover{
+                color: #bbb;
+                cursor: not-allowed;
+            }
+        }
+        &-ul-container{
+            position: absolute;
+            top: 0;
+            left: 100%;
+            ul{
+                padding: 0;
+                background: #fff;
+                box-shadow: 0 3px 8px rgba(0,0,0,.35);
+                border-radius: 4px;
+                list-style: none;
+            }
+        }
+    }
 }
