--- a/pages/carouselPage.scss
+++ b/pages/carouselPage.scss
@@ -1,5 +1,6 @@
 @import "adminSystem/adminSystem.scss";
 .hp-carouselPage {
+    padding: 20px;
     .hp-carousel {
         background: #364d79;
         height: 180px;
