--- a/components/cascader/cascader.scss
+++ b/components/cascader/cascader.scss
@@ -56,7 +56,7 @@ $menus-bg-color: #66b1ff4a;
                 min-width: 110px;
                 padding: 0.4rem .5rem;
                 transition: all ease-in-out .1s;
-                &:hover {
+                &:not(.disabled):hover {
                     background: $menus-bg-color;
                 }
                 &:first-child {
@@ -65,6 +65,10 @@ $menus-bg-color: #66b1ff4a;
                 }
                 &.selected {
                     background: #f1f0f0;
+                }
+                &.disabled {
+                    cursor: not-allowed;
+                    color: #00000040;
                 }
             }
         }
